fix: fix mongo ports

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   mongo:
     image: mongo:4.4.23-rc0
     container_name: mongodb
-    ports:
-      - 27017:27017
+    expose:
+      - 27017
     volumes:
       - mongodb_data:/data/db
   app:
