--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,19 @@
 version: "3"
 services:
-  mongo:
+  node-app:
+    build: ./app
+    container_name: nodejs-app
+    ports:
+      - 3000:3000
+    volumes:
+      - ./app:/app
+      - /app/node_modules
+    depends_on:
+      - mongodb
+  mongodb:
     image: mongo:4.4.23-rc0
     container_name: mongodb
     ports:
       - 27017:27017
     volumes:
-      - mongodb_data:/data/db
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: nodejs-app
-    ports:
-      - 3000:3000
-    depends_on:
-      - mongo
-volumes:
-  mongodb_data:
+      - ./data/db:/data/db
