add: gitignore and dockerignoew

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,10 +3,13 @@ FROM node:10.24.1
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install
+RUN npm install \
+    && npm install -g nodemon
 
 COPY . .
 
+RUN chmod 777 ./initialize-node.sh
+
 EXPOSE 3000
 
-CMD ["node", "app.js"]
+CMD ["./initialize-node.sh"]
