--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   node-app:
     build: ./app
-    container_name: nodejs-app
+    container_name: node-app
     ports:
       - 3000:3000
     volumes:
