--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - 3000:3000
     volumes:
       - ./app:/app
-      - /app/node_modules
+      - app_node_modules:/app/node_modules
     depends_on:
       - mongodb
   mongodb:
@@ -17,3 +17,5 @@ services:
       - 27017:27017
     volumes:
       - ./data/db:/data/db
+volumes:
+  app_node_modules:
