--- a/app/package.json
+++ b/app/package.json
@@ -5,14 +5,16 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "gulp": "gulp",
+    "build-dev": "set NODE_ENV=development && gulp",
     "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongodb": "^3.7.4"
-  }
+  },
+  "devDependencies": {}
 }
